# Content-Management-Service

./: .gitignore  Dockerfile.prod  Makefile  README.md  entrypoint.prod.sh  manage.py  pyproject.toml  pytest.ini  requirements.txt  start.sh
.github/workflows/: ci_cd.yml  django_test.yml  run-apps-tests.yml
apps/accounts/: admin.py  models.py  permissions.py  serializers.py  urls.py  utils.py
apps/attributes/: admin.py  models.py  urls.py  utils.py
apps/contact/: models.py  seriallizers.py  urls.py  views.py
apps/core/: error_codes.py  exceptions.py
apps/currency/: admin.py  models.py  urls.py  views.py
apps/engagement/: admin.py  apps.py  models.py  urls.py
apps/file_storage/: models.py  urls.py  views.py
apps/fsm/: admin.py  filtersets.py  models.py  pagination.py  permissions.py  urls.py  utils.py
apps/meeting/: admin.py  apps.py  models.py  urls.py  utils.py
apps/program/: apps.py  urls.py
apps/report/: models.py  tests.py  todo.py  urls.py  utils.py  views.py
apps/reports/: urls.py  views.py
apps/response/: apps.py  urls.py  utils.py
apps/responses/: urls.py
apps/roadmap/: models.py  tests.py  urls.py  utils.py  views.py
apps/sale/: admin.py  exceptions.py  urls.py  validators.py
apps/sales/: urls.py
apps/scoring/: admin.py  models.py  urls.py
assets/: greeting_mail.html
content_management_service/: __init__.py  admin.py  apps.py  asgi.py  celery_app.py  exception_handler.py  urls.py  wsgi.py
errors/: error_codes.py
kamva_backend/: urls.py
manage_content_service/: __init__.py  admin.py  apps.py  asgi.py  celery_app.py  celeryconfig.py  health_check.py  urls.py  wsgi.py
messenger/: tasks.py  urls.py  views.py
proxies/: Shad.py  http_request_utils.py
tests/: test_user_funds_transfer.py
utilities/: cache_model_viewset.py  custom_cache_key.py  singleton_class.py
utils/: safe_auth.py
(+553 files in other folders)
